lab-lex/y.output
Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement
    3               | statement_list statement

    4 statement: assignment
    5          | expression ':'

    6 assignment: ID '=' expression

    7 expression: NUMBER
    8           | ID
    9           | '-' expression
   10           | expression '+' expression
   11           | expression '-' expression
   12           | expression '*' expression
   13           | expression '/' expression
   14           | '(' expression ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 14
    ')' (41) 14
    '*' (42) 12
    '+' (43) 10
    '-' (45) 9 11
    '/' (47) 13
    ':' (58) 5
    '=' (61) 6
    error (256)
    NUMBER <num> (258) 7
    ID <str> (259) 6 8
    UMINUS (260)


Nonterminals, with rules where they appear

    $accept (14)
        on left: 0
    program (15)
        on left: 1
        on right: 0
    statement_list (16)
        on left: 2 3
        on right: 1 3
    statement (17)
        on left: 4 5
        on right: 2 3
    assignment <num> (18)
        on left: 6
        on right: 4
    expression <num> (19)
        on left: 7 8 9 10 11 12 13 14
        on right: 5 6 9 10 11 12 13 14


State 0

    0 $accept: . program $end

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 2
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    program         go to state 5
    statement_list  go to state 6
    statement       go to state 7
    assignment      go to state 8
    expression      go to state 9


State 1

    7 expression: NUMBER .

    $default  reduce using rule 7 (expression)


State 2

    6 assignment: ID . '=' expression
    8 expression: ID .

    '='  shift, and go to state 10

    $default  reduce using rule 8 (expression)


State 3

    9 expression: '-' . expression

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 11
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    expression  go to state 12


State 4

   14 expression: '(' . expression ')'

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 11
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    expression  go to state 13


State 5

    0 $accept: program . $end

    $end  shift, and go to state 14


State 6

    1 program: statement_list .
    3 statement_list: statement_list . statement

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 2
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    $default  reduce using rule 1 (program)

    statement   go to state 15
    assignment  go to state 8
    expression  go to state 9


State 7

    2 statement_list: statement .

    $default  reduce using rule 2 (statement_list)


State 8

    4 statement: assignment .

    $default  reduce using rule 4 (statement)


State 9

    5 statement: expression . ':'
   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression

    '+'  shift, and go to state 16
    '-'  shift, and go to state 17
    '*'  shift, and go to state 18
    '/'  shift, and go to state 19
    ':'  shift, and go to state 20


State 10

    6 assignment: ID '=' . expression

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 11
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    expression  go to state 21


State 11

    8 expression: ID .

    $default  reduce using rule 8 (expression)


State 12

    9 expression: '-' expression .
   10           | expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression

    $default  reduce using rule 9 (expression)


State 13

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression
   14           | '(' expression . ')'

    '+'  shift, and go to state 16
    '-'  shift, and go to state 17
    '*'  shift, and go to state 18
    '/'  shift, and go to state 19
    ')'  shift, and go to state 22


State 14

    0 $accept: program $end .

    $default  accept


State 15

    3 statement_list: statement_list statement .

    $default  reduce using rule 3 (statement_list)


State 16

   10 expression: expression '+' . expression

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 11
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    expression  go to state 23


State 17

   11 expression: expression '-' . expression

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 11
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    expression  go to state 24


State 18

   12 expression: expression '*' . expression

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 11
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    expression  go to state 25


State 19

   13 expression: expression '/' . expression

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 11
    '-'     shift, and go to state 3
    '('     shift, and go to state 4

    expression  go to state 26


State 20

    5 statement: expression ':' .

    $default  reduce using rule 5 (statement)


State 21

    6 assignment: ID '=' expression .
   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression

    '+'  shift, and go to state 16
    '-'  shift, and go to state 17
    '*'  shift, and go to state 18
    '/'  shift, and go to state 19

    $default  reduce using rule 6 (assignment)


State 22

   14 expression: '(' expression ')' .

    $default  reduce using rule 14 (expression)


State 23

   10 expression: expression . '+' expression
   10           | expression '+' expression .
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression

    '*'  shift, and go to state 18
    '/'  shift, and go to state 19

    $default  reduce using rule 10 (expression)


State 24

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   11           | expression '-' expression .
   12           | expression . '*' expression
   13           | expression . '/' expression

    '*'  shift, and go to state 18
    '/'  shift, and go to state 19

    $default  reduce using rule 11 (expression)


State 25

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   12           | expression '*' expression .
   13           | expression . '/' expression

    $default  reduce using rule 12 (expression)


State 26

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '*' expression
   13           | expression . '/' expression
   13           | expression '/' expression .

    $default  reduce using rule 13 (expression)
